@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-10T16:24:29Z",
+  "timestamp" : "2024-05-11T08:22:27Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 750,
-  "uniques" : 367,
+  "count" : 751,
+  "uniques" : 368,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
