@@ -1,5 +1,5 @@
 {
-  "count": 5,
+  "count": 6,
   "uniques": 2,
   "clones": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2024-05-10T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-11T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
