@@ -1,3 +1,12 @@
+2024-05-11T08:22:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9042347880 # 262
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-11
+* notice: last 14d: unq all: 2 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 367 750
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 368 751
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-11]
+
 2024-05-10T16:24:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9035144695 # 260
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-10
